Fixes the overlapping of icons and texts for large breakpoints.

--- a/header.css
+++ b/header.css
@@ -100,6 +100,7 @@
 .header__container {
 	background-repeat: no-repeat;
 	font-size: 0.7em;
+	padding-left: 20px;
 }
 
 @media screen and (min-width: 568px) {
